# ChronoForge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Package.swift  README.md
.github/workflows/: ci.yml
apps/cli/: main.cpp
apps/macos/: Package.swift
apps/macos/Resources/: Info.plist
apps/macos/Sources/: CacheManager.swift  ChronoForgeMacApp.swift  CoreRenderer.swift  EffectDescriptor.swift  EffectRegistry.swift  FileCoreRenderer.swift  FullRenderPipeline.swift  FullVideoDecoder.swift  FullVideoExporter.swift  HelpCatalog.swift  ImageSequenceDecoder.swift  MediaMuxer.swift  MediaSource.swift  Models.swift  PNGSequenceExporter.swift  ProjectPersistence.swift  ProjectStore.swift  ProxyCache.swift  RandomStackGenerator.swift  SelfTestRunner.swift  SessionHistory.swift  SessionRecoveryStore.swift  SessionStore.swift  TensorImage.swift  VideoDecoder.swift  VideoExporter.swift
bridge/: ChronoForgeBridge.cpp
docs/: architecture.md  done.md  next-development-phase.md  release-process.md  todo.md
include/: ChronoForgeBridge.h
include/chronoforge/core/: cache_store.hpp  effects.hpp  file_executor.hpp  mapped_tensor.hpp  node_graph.hpp  resource_planner.hpp  spectral.hpp  spectral_morph.hpp  video_tensor.hpp
scripts/: create_dmg.sh  package_macos.sh
src/: cache_store.cpp  effects.cpp  file_executor.cpp  mapped_tensor.cpp  node_graph.cpp  resource_planner.cpp  spectral.cpp  spectral_morph.cpp
tests/: core_tests.cpp  performance_smoke.cpp  visual_regression.cpp
tests/integration/: main.swift
